<resources>
    <string name="app_name">MOODVIE</string>
    <string name="login_header">LOGIN</string>
    <string name="login_button_text">Login To My Account</string>
    <string name="login_no_account">Dont have an account? </string>
    <string name="login_create_account"><u>Create one here.</u></string>
    <string name="login_remember">Remember Me?</string>
    <string name="prompt_name">Name</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="create_account_button">Create Your Account</string>
    <string name="image_description">Moodvie Logo</string>
    <string name="title_activity_face_scan">faceScan</string>
    <string name="take_picture_button">Open Camera</string>
    <string name="scan_header">Mood Scanner</string>
    <string name="use_this">Use Image</string>
    <string name="logout">Logout</string>
    <string name="search_for_movie">Search for Movie</string>
    <string name="face_scan">Face Scan</string>
    <string name="scan_movie">Scan Movie</string>
    <string name="upcitemdbAPI">https://api.upcitemdb.com/prod/trial/lookup?upc=%s</string>
    <string name="tmdbAPIGetID"><![CDATA[https://api.themoviedb.org/3/search/movie?api_key=41c71716931eb4f4b0f331c491551a7b&query=%s]]></string>
    <string name="tmdbAPIMovieInformation"><![CDATA[https://api.themoviedb.org/3/movie/%s?api_key=41c71716931eb4f4b0f331c491551a7b&append_to_response=credits]]></string>
    <string name="movie_title">Movie Title</string>
    <string name="starring">Starring:</string>
    <string name="movie_synopsis">Description</string>
    <string name="cast_members">Cast Members</string>
    <string name="synopsis_title">Synopsis:</string>
    <string name="alert_delete_movie">Delete %s</string>
    <string name="delete_movie_alert_message">Are you sure you want to delete this movie?</string>
    <string name="confirm_message">Confirm</string>
    <string name="already_own_movie">You Already Own This Movie</string>
    <string name="added_movie">Added Movie Successfully</string>
    <string name="failed_to_delete_movie">Failed to delete %s</string>
    <string name="successfully_deleted_movie">%s has been deleted.</string>
    <string name="failed_to_add_movie">Failed to add movie to your stored list</string>
    <string name="fill_in_all_fields">Fill in all fields to continue.</string>
    <string name="fill_in_field">Fill in the field to continue.</string>
    <string name="account_doesnt_exist">This Account Doesn\'t Exist</string>
    <string name="auth_failed">Authentication Failed</string>
    <string name="auth_success">Authentication Successful</string>
    <string name="change_username">Change Username</string>
    <string name="change_password">Change Password</string>
    <string name="change_flag">change %s</string>
    <string name="cancel">Cancel</string>
    <string name="no_camera_available">No Camera Available</string>
    <string name="logging_out">Logging out..</string>
    <string name="cant_connect_to_api">Can\'t Connect To API - Check You Are Connected To The Internet</string>
    <string name="barcode_not_found">This Barcode Was Not Found In The Database</string>
    <string name="username_exists">This username has already been created.</string>
    <string name="successfully_created_account">Successfully created the account.</string>
    <string name="failed_to_create_account">Failed to create your account.</string>
    <string name="image_path">https://image.tmdb.org/t/p/w185%s</string>
    <string name="retake_image">Retake Image</string>
    <string name="smile_probability">Smile Probability: %s\%%</string>
    <string name="recommended_movie_genre">Recommended Movie Genre: %s</string>
    <string name="title_activity_side_menu">Moodvie</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_face">Face Scanner</string>
    <string name="menu_Scan_Barcode">Scan Movie Barcode</string>
    <string name="menu_settings">Settings</string>
    <string name="movies_owned_by">Movies Owned By %s</string>
</resources>