<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light"
    tools:context=".CreateAccount">

    <ImageView
        android:id="@+id/moodvieLogo"
        android:layout_width="match_parent"
        android:layout_height="143dp"
        android:layout_marginTop="36dp"
        android:src="@drawable/ic_launcher_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/image_description"
        />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/createAccount_name"
        android:layout_width="366dp"
        android:layout_height="41dp"
        android:layout_marginTop="52dp"
        android:hint="@string/prompt_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/moodvieLogo" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/createAccount_username"
        android:layout_width="366dp"
        android:layout_height="42dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/prompt_username"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/createAccount_name" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/createAccount_password"
        android:layout_width="366dp"
        android:layout_height="42dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/prompt_password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/createAccount_username" />

    <Button
        android:id="@+id/createAccount_createButton"
        android:layout_width="329dp"
        android:layout_height="59dp"
        android:layout_marginBottom="36dp"
        android:text="@string/create_account_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>