<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/pinkpurple"
    tools:context=".SettingsPage">

    <Button
        android:id="@+id/SettingsPage_logout"
        android:layout_width="281dp"
        android:layout_height="56dp"
        android:layout_marginStart="76dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="76dp"
        android:text="@string/logout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SettingsPage_changePassword" />

    <Button
        android:id="@+id/SettingsPage_changePassword"
        android:layout_width="281dp"
        android:layout_height="56dp"
        android:layout_marginStart="76dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="76dp"
        android:text="@string/change_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SettingsPage_changeUsername" />

    <Button
        android:id="@+id/SettingsPage_changeUsername"
        android:layout_width="281dp"
        android:layout_height="56dp"
        android:layout_marginStart="76dp"
        android:layout_marginTop="256dp"
        android:layout_marginEnd="76dp"
        android:text="@string/change_username"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>